core/symbiote-core-yaml-k8s/symbiote-aam-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose-swarm-core.yml
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: symbiote-aam
  name: symbiote-aam
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: symbiote-aam
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose-swarm-core.yml
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.network/symbiote: "true"
        io.kompose.service: symbiote-aam
    spec:
      containers:
        - env:
            - name: no_proxy
              value: localhost,127.0.0.0,127.0.1.1,10.*.*.*,iotfeds-symbiotecore.intracom-telecom.com
          image: symbioteh2020/symbiote-aam:5.0.12
          name: symbiote-aam
          resources:
            limits:
              memory: "1000M"
            requests:
              memory: "500M"
          volumeMounts:
            - mountPath: /home/bootstrap.properties
              name: authenticationauthorizationmanager-bootstrap-configmap-volume
              subPath: bootstrap.properties
            - mountPath: /home/core.p12
              name: aamkeystore
              subPath: core.p12
      restartPolicy: Always
      volumes:
        - name: authenticationauthorizationmanager-bootstrap-configmap-volume
          configMap:
            name: authenticationauthorizationmanager-bootstrap-configmap
        - name: aamkeystore
          secret:
            items:
              - key: aamkeystore
                path: core.p12
            secretName: aamkeystore
status: {}
