core/symbiote-core-yaml-k8s/symbiote-admin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose-swarm-core.yml
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: symbiote-admin
  name: symbiote-admin
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: symbiote-admin
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose-swarm-core.yml
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.network/symbiote: "true"
        io.kompose.service: symbiote-admin
    spec:
      containers:
        - env:
            - name: placeholder
              value: placeholder
          image: symbioteh2020/symbiote-admin:3.1.6
          name: symbiote-admin
          command: ["/bin/sh","-c"]
          args: ["java -Xmx1024m -Duser.home=/home -Dspring.output.ansi.enabled=NEVER -jar $(ls *.jar)"]
          ports:
          - containerPort: 8250
          resources:
            limits:
              memory: "700M"
            requests:
              memory: "300M"
          volumeMounts:
            - mountPath: /home/bootstrap.properties
              name: bootstrap-properties-configmap-volume
              subPath: bootstrap.properties
      restartPolicy: Always
      volumes:
        - name: bootstrap-properties-configmap-volume
          configMap:
              name: bootstrap-properties-configmap
status: {}
