core/symbiote-core-yaml-k8s/symbiote-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose-swarm-core.yml
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: symbiote-api
  name: symbiote-api
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: symbiote-api
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose-swarm-core.yml
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.network/symbiote: "true"
        io.kompose.service: symbiote-api
    spec:
      containers:
        - args:
            - sh
            - -c
            - java -DSPRING_BOOT_WAIT_FOR_SERVICES=symbiote-coreinterface:8100 -Xmx512M -Duser.home=/home -Dspring.output.ansi.enabled=NEVER -jar $(ls *run.jar)
          image: shapes2020/symbiote_api:0.0.5
          name: symbiote-api
          resources:
            limits:
              memory: "700M"
            requests:
              memory: "256M"
          volumeMounts:
            - mountPath: /home/application.yaml
              name: symbiote-api-configmap-volume
              subPath: application.yaml
      restartPolicy: Always
      volumes:
        - name: symbiote-api-configmap-volume
          configMap:
              name: symbiote-api-configmap
status: {}
