core/symbiote-core-yaml-k8s/symbiote-bt-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose-swarm-core.yml
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: symbiote-bt
  name: symbiote-bt
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: symbiote-bt
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose-swarm-core.yml
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.network/symbiote: "true"
        io.kompose.service: symbiote-bt
    spec:
      containers:
        - args:
            - sh
            - -c
            - java -DSPRING_BOOT_WAIT_FOR_SERVICES=symbiote-coreinterface:8100 -Xmx1024m -Duser.home=/home -Dspring.output.ansi.enabled=NEVER -jar $(ls *run.jar)
          image: symbioteh2020/symbiote-bt:3.0.5
          name: symbiote-bt
          resources:
            limits:
              memory: "1024M"
            requests:
              memory: "512M"
          volumeMounts:
            - mountPath: /home/bootstrap.properties
              name: bootstrap-properties-configmap-volume
              subPath: bootstrap.properties
          ports:
           - containerPort: 8205
      restartPolicy: Always
      volumes:
        - name: bootstrap-properties-configmap-volume
          configMap:
              name: bootstrap-properties-configmap
status: {}
