core/symbiote-core-yaml-k8s/symbiote-mongo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose-swarm-core.yml
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: symbiote-mongo
  name: symbiote-mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: symbiote-mongo
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose-swarm-core.yml
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.network/symbiote: "true"
        io.kompose.service: symbiote-mongo
    spec:
      containers:
        - env:
            - name: no_proxy
              value: localhost,127.0.0.0,127.0.1.1,10.*.*.*,iotfeds-symbiotecore.intracom-telecom.com
          image: mongo:3.6
          name: symbiote-mongo
          ports:
            - containerPort: 27017
          resources: {}
          volumeMounts:
            - mountPath: /data/db
              name: symbiote-core-vol
      restartPolicy: Always
      volumes:
        - name: symbiote-core-vol
          persistentVolumeClaim:
            claimName: symbiote-core-vol
status: {}
