core/symbiote-core-yaml-k8s/symbiote-rabbitmq-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose-swarm-core.yml
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: symbiote-rabbitmq
  name: symbiote-rabbitmq
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: symbiote-rabbitmq
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose-swarm-core.yml
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.network/symbiote: "true"
        io.kompose.service: symbiote-rabbitmq
    spec:
      containers:
        - image: rabbitmq:3-alpine
          name: symbiote-rabbitmq
          ports:
            - containerPort: 5671
            - containerPort: 5672
          resources: {}
      restartPolicy: Always
status: {}
