core/symbiote-core-yaml-k8s/symbiote-aam-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: symbiote-aam
  name: symbiote-aam
spec:
  ports:
    - name: "aam"
      port: 8443
      targetPort: 8443
  selector:
    io.kompose.service: symbiote-aam
