core/symbiote-core-yaml-k8s/symbiote-cloudcoreinterface-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: symbiote-cloudcoreinterface
  namespace: symbiote-core
spec:
  ports:
    - name: cloudcoreinterface
      protocol: TCP
      port: 8101
      targetPort: 8101
  selector:
    io.kompose.service: symbiote-cloudcoreinterface
  type: ClusterIP
