core/symbiote-core-yaml-k8s/symbiote-coreconfig-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose-swarm-core.yml
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: symbiote-coreconfig
  name: symbiote-coreconfig
spec:
  ports:
    - name: "8888"
      port: 8888
      targetPort: 8888
  selector:
    io.kompose.service: symbiote-coreconfig
status:
  loadBalancer: {}
