core/symbiote-core-yaml-k8s/symbiote-coreinterface-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: symbiote-coreinterface
spec:
  selector:
    io.kompose.service: symbiote-coreinterface
  ports:
    - protocol: TCP
      port: 8100
      targetPort: 8100
