core/symbiote-core-yaml-k8s/symbiote-rabbitmq-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose-swarm-core.yml
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: symbiote-rabbitmq
  name: symbiote-rabbitmq
spec:
  ports:
    - name: "5671"
      port: 5671
      targetPort: 5671
    - name: "5672"
      port: 5672
      targetPort: 5672
  selector:
    io.kompose.service: symbiote-rabbitmq
status:
  loadBalancer: {}
